Fix for bug 184550. Don't need anymore to insert the document header separatly. That will avoid the performance regression as well. R=cavin, SR=bienvenu